--- a/sudoku.css
+++ b/sudoku.css
@@ -3,15 +3,14 @@ body{
     text-align: center;
 }
 hr{
-    width: 500px;
-
+    width: 630px;
 }
 #errors{
     color:coral;
 }
 #board{
-    width: 450px;
-    height: 450px;
+    width: 630px;
+    height: 630px;
 
     /* background-color: yellow; */
     margin: 0 auto;
@@ -19,8 +18,8 @@ hr{
     flex-wrap: wrap;
 }
 .tile{
-    width: 48px;
-    height: 48px;
+    width: 68px;
+    height: 68px;
     border: 1px solid lightgray;
 
     /* Text */
@@ -31,17 +30,17 @@ hr{
     align-items: center;
 }
 #digits{
-    width: 450px;
-    height: 50px;
+    width: 630px;
+    height: 60px;
 
-    /* background-color: yellow; */
+    /* background-color: yellow;  */
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
 .number{
-    width: 44px;
-    height: 44px;
+    width: 64px;
+    height: 64px;
     border: 1px solid black;
     margin: 2px;
 
@@ -66,15 +65,14 @@ hr{
 }
 #inicio{
     display: flex;
-    padding: 20px;
+    padding-top: 5px;
     justify-content: center;
     align-items: center;
 }
 .buttonGenerales{
-   position: absolute;
-   left: 90%;
    padding: 10px;
-   width: 80px;
+   height: 60px;
+   width: 120px;
    border: 2px solid black;
    background-color: coral;
    border-radius: 10px;
@@ -99,18 +97,15 @@ hr{
 .dark-vertical-line{
     border-right: 1px solid white;
 }
-#corregir{
-    width: auto;
-}
 #menu button{
-    width: 100px;
-    height: 80px;
+    width: 140px;
+    height: 100px;
     border: 1px solid black;
 }
 #eliminar{
-    width: 100px;
+    width: 140px;
     height: 80px;
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 .rojo{ background-color: red;}
@@ -130,26 +125,39 @@ hr{
 }
 
 #center {
-    flex: 3;
-    padding: 0 20px;
+    flex: 2;
+    margin-bottom: 20px;
 }
 
 #right {
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center; /* Centra el contenido horizontalmente */
     align-items: center; /* Centra el contenido verticalmente */
+    row-gap: 80px;
+    
 }
 
-
-
-@media screen and (max-width: 950px) {
-    #darkmode{
-        top: 80%;
-        left: 20%;
+.colorSelected{
+        filter: brightness(0.65); /* Reducir el brillo al 80% */
+    
+}
+@media screen and (max-width: 958px) {
+    #container {
+        flex-direction: column; /* Cambia la dirección de la flexbox a columna */
     }
-    #corregir{
-        top: 80%;
-        left: 65%;
+
+    #right {
+        order: 3; /* Cambia el orden para que aparezca después de #center */
+    }
+}
+@media screen and (max-width: 590px) {
+    #container {
+        flex-direction: column; /* Cambia la dirección de la flexbox a columna */
+    }
+
+    #right {
+        order: 3; /* Cambia el orden para que aparezca después de #center */
     }
 }
